<resources>
    <string name="app_name">Jet File Transfer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="choose_email_client">Chose Email Client</string>

    <string name="default_tcp_port_number">4444</string>
    <string name="tcp_port_number">tcp_port_number</string>
    <string name="tcp_port_summary">Port Number(For Advance User)</string>
    <string name="tcp_port_title">Connection Port Number</string>

    <string name="default_udp_port_number">8888</string>
    <string name="udp_port_number">udp_port_number</string>
    <string name="udp_port_summary">Port Number(For Advance User)</string>
    <string name="udp_port_title">Broadcast port number</string>

    <string name="default_save_value">Internal</string>
    <string name="save_key">Internal</string>
    <string name="save_dialog_title">Select Area To Saving Data</string>
    <string name="save_summary">Select the area where you want the files to be saved</string>
    <string name="save_title">Save file location</string>

    <string name="pref_header_about">About</string>
    <string name="summary_about">Copyright © Mustafa Erdem Köşk</string>
    <string name="app_version">1.0.0.0</string>
    <string name="title_version">Version</string>

    <string name="key_send_feedback">key_send_feedback</string>
    <string name="summary_support">Got any queries? We are happy to help!</string>
    <string name="title_send_feedback">Send Feedback</string>


    <string name="pref_title_notifications">Notifications</string>
    <string name="title_faq">FAQ</string>
    <string name="summary_faq">View frequently asked questions</string>
    <string name="url_faq">https://www.androidhive.info/privacy-policy/</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="url_privacy">https://www.androidhive.info/privacy-policy/</string>
    <string name="title_terms">Terms &amp; Conditions</string>
    <string name="url_terms">https://www.androidhive.info/terms-of-service/</string>
    <string name="title_gallery_storage">Default Storage</string>
    <string name="title_new_notification_sound">New message notification</string>
    <string name="title_vibrate">Vibrate</string>
    <string name="summary_vibrate">Vibrate on new notification</string>
    <string name="key_upload_over_wifi">key_upload_over_wifi</string>
    <string name="key_gallery_name">key_gallery_name</string>
    <string name="key_upload_quality">key_upload_quality</string>
    <string name="notifications_new_message">true</string>
    <string name="key_notifications_new_message_ringtone">key_notifications_new_message_ringtone</string>
    <string name="key_vibrate">key_vibrate</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_choose_file">Select File</string>
    <string name="jetfiletransfer_video_learn">Watch the video</string>
    <string name="jetfiletransfer_video">https://www.youtube.com/watch?v=g4C_jfIkYe4</string>

    <string name="title_activity_pro_version">ProVersionActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="title_activity_intro">IntroActivity</string>

    <!-- Strings related to Settings -->


</resources>
