<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <PreferenceCategory android:title="General">


        <EditTextPreference
            android:defaultValue="@string/default_tcp_port_number"
            android:key="@string/tcp_port_number"
            android:summary="@string/tcp_port_summary"
            android:title="@string/tcp_port_title" />

        <EditTextPreference
            android:defaultValue="@string/default_udp_port_number"
            android:key="@string/udp_port_number"
            android:summary="@string/udp_port_summary"
            android:title="@string/udp_port_title" />


    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_title_notifications">

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/notifications_new_message"
            android:title="@string/title_new_notification_sound" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_header_about">

        <Preference
            android:selectable="false"
            android:summary="@string/summary_about" />

        <Preference
            android:summary="@string/app_version"
            android:title="@string/title_version" />

        <Preference
            android:key="@string/key_send_feedback"
            android:summary="@string/summary_support"
            android:title="@string/title_send_feedback" />
        <!-- preference opens url in browser -->
        <Preference
            android:summary="@string/summary_faq"
            android:title="@string/title_faq">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="http://jetfiletransfer.erdemkosk.com/#faq" />
        </Preference>

        <Preference android:title="What is Jet File Transfer"
            android:summary="Watch Jet File Transfer video on Youtube">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://www.youtube.com/watch?v=g4C_jfIkYe4" />
        </Preference>

        <Preference android:title="Learn More"
            android:summary="Visit Jet File Transfer web site">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="http://jetfiletransfer.erdemkosk.com" />
        </Preference>


    </PreferenceCategory>
    <PreferenceCategory android:title="Details">
        <Preference android:title="Special Thanks to"
            android:summary="Onur Dindar - Sertaç Damar - Mert Ergül - Taylan Akkuş ">
        </Preference>
        <Preference android:title="Icons"
            android:summary="Some of our icons are from icon8.com">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://icons8.com" />
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>
